--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: prepare docker
+          name: Pull sbt docker image
           command: docker pull scalableminds/sbt:$SBT_VERSION_TAG
       - restore_cache:
           keys:
@@ -19,18 +19,19 @@ jobs:
             - cache-{{ .Branch }}
             - cache
       - run:
-          name: chown
+          name: Fix folder permissions
           command: sudo chown -R circleci:circleci ~
 
       - run:
-          name: build frontend-dependencies
+          name: Install frontend dependencies
           command: docker-compose run base yarn install
       - run:
-          name: build frontend-docs
+          name: Build frontend documentation
           command: docker-compose run base yarn run docs
       - run:
-          name: build code
+          name: Build code (sbt and webpack)
           command: docker-compose run base sbt clean compile stage
+
       - save_cache:
           key: cache-{{ .Branch }}-{{ .Environment.CACHE_VERSION }}
           paths:
@@ -38,24 +39,25 @@ jobs:
             - "~/.ivy2"
             - "~/.sbt"
             - "~/.yarn-cache"
+
       - run:
-          name: build docker image
+          name: Build docker image
           command: docker build --no-cache --pull -t scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
 
       - run:
-          name: test frontend-linting
+          name: Lint frontend code
           command: docker-compose run base bash -c "yarn run lint && yarn run am-i-pretty"
       - run:
-          name: test frontend-flow
+          name: Validate frontend types with flow
           command: docker-compose run base yarn flow
       - run:
-          name: test frontend-tests
+          name: Run frontend tests
           command: docker-compose run base yarn test-verbose
       # - run:
-      #     name: test e2e-tests
+      #     name: Run end-to-end tests
       #     command: docker-compose run e2e-tests
       - run:
-          name: test integration
+          name: Run integration test
           command: |
             set -x
             DOCKER_TAG=${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} docker-compose up -d webknossos
@@ -64,7 +66,7 @@ jobs:
             docker-compose down --volumes --remove-orphans
 
       # - run:
-      #     name: deployment
+      #     name: Deploy docker images
       #     command: |
       #       set -x
       #       docker login -u $DOCKER_USER -p $DOCKER_PASS
