--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,12 +45,12 @@ services:
       - USER_UID
       - USER_GID
       - TZ
-    working_dir: /home/$USER/webknossos
+    working_dir: /home/$USER_NAME/webknossos
     volumes:
-      - ".:/home/$USER/webknossos"
-      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/$USER/.m2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/$USER/.ivy2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/$USER/.sbt"
+      - ".:/home/$USER_NAME/webknossos"
+      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/$USER_NAME/.m2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/$USER_NAME/.ivy2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/$USER_NAME/.sbt"
       - "${DOCKER_CACHE_PREFIX:-~}/.yarn-cache:/usr/local/share/.cache/yarn"
 
   frontend-dependencies:
