--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
   base:
     image: scalableminds/sbt:$SBT_VERSION_TAG
     environment:
-      - USER_NAME
+      - USER_NAME=${USER_NAME:-sbt-user}
       - USER_UID
       - USER_GID
       - TZ
-    working_dir: /home/$USER_NAME/webknossos
+    working_dir: /home/${USER_NAME:-sbt-user}/webknossos-datastore
     volumes:
-      - ".:/home/$USER_NAME/webknossos"
-      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/$USER_NAME/.m2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/$USER_NAME/.ivy2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/$USER_NAME/.sbt"
+      - ".:/home/${USER_NAME:-sbt-user}/webknossos-datastore"
+      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/${USER_NAME:-sbt-user}/.m2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/${USER_NAME:-sbt-user}/.ivy2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/${USER_NAME:-sbt-user}/.sbt"
 
   dev:
     extends:
