CombinedAuthenticator wraps silhouette TokenAuthenticator and CookieAuthenticator

--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -14,6 +14,7 @@ silhouette {
   cookieAuthenticator.rememberMe.authenticatorExpiry=30 days
 
   tokenAuthenticator.headerName="X-Auth-Token"
+  tokenAuthenticator.expirationDate=1000 years
 
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
