cookies expire after 30 days instead of at browser session end

--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -8,6 +8,7 @@ silhouette {
   cookieAuthenticator.useFingerprinting=true
   cookieAuthenticator.authenticatorIdleTimeout=30 days
   cookieAuthenticator.authenticatorExpiry=30 days
+  cookieAuthenticator.cookieMaxAge=30 days
 
   tokenAuthenticator.headerName="X-Auth-Token"
   tokenAuthenticator.authenticatorIdleTimeout=23000 days
