--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,10 @@ datastore {
     uri = "localhost:9000"
     secured = false
   }
+  fossildb{
+    address = "localhost"
+    port = 7155
+  }
 }
 
 # Binary data settings
