--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_test_deploy:
+  build_test_push:
     machine: true
     environment:
       SBT_VERSION_TAG: sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
@@ -42,17 +42,17 @@ jobs:
             sleep 10
             curl --retry 3 --max-time 15 -v http://localhost:9090/data/health
             docker-compose down --volumes --remove-orphans
-      # - run:
-      #     name: Deploy docker images
-      #     command: |
-      #       set -x
-      #       docker login -u $DOCKER_USER -p $DOCKER_PASS
-      #       docker tag scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
-      #       docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
-      #       docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
-      #       docker logout
+      - run:
+          name: Push docker images
+          command: |
+            set -x
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker tag scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
+            docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+            docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
+            docker logout
 workflows:
   version: 2
   default:
     jobs:
-      - build_test_deploy
+      - build_test_push
