--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       USER_NAME: circleci
       USER_UID: 1001
       USER_GID: 1001
+      TZ: Europe/Berlin
     steps:
       - checkout
       - run:
@@ -51,9 +52,13 @@ jobs:
       - run:
           name: Run frontend tests
           command: docker-compose run base yarn test-verbose
-      # - run:
-      #     name: Run end-to-end tests
-      #     command: docker-compose run e2e-tests
+      - run:
+          name: Run end-to-end tests
+          command: |
+            for i in {1..3}; do # retry
+              docker-compose run e2e-tests && s=0 && break || s=$?
+            done
+            (exit $s)
       - run:
           name: Run smoke test
           command: |
