--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.28.1",
     "documentation": "^5.1.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.1.1",
@@ -43,7 +45,7 @@
     "himalaya": "^0.2.12",
     "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.0",
-    "jsdom": "^11.2.0",
+    "jsdom": "^11.5.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mock-require": "^1.2.1",
@@ -59,23 +61,29 @@
   },
   "scripts": {
     "test": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=30s",
-    "test-verbose": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=60s --verbose",
+    "test-verbose":
+      "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=60s --verbose",
     "test-only": "buildtools/test.sh test --timeout=30s",
     "test-watch": "buildtools/test.sh test --watch",
     "test-debug": "buildtools/test.sh test --debug",
     "test-prepare": "buildtools/test.sh prepare",
     "test-prepare-watch": "buildtools/test.sh prepare -w",
     "test-e2e": "node prepareTestDB.js && buildtools/test.sh test-e2e --timeout=60s --verbose",
-    "test-help": "echo For development it is recommended to run yarn test-prepare-watch in one terminal and yarn test-watch in another. This is the fastest way to perform incremental testing. If you are only interested in running test once, use yarn test.",
+    "test-help":
+      "echo For development it is recommended to run yarn test-prepare-watch in one terminal and yarn test-watch in another. This is the fastest way to perform incremental testing. If you are only interested in running test once, use yarn test.",
     "remove-snapshots": "rm -r app/assets/javascripts/test/snapshots/public",
     "flow": "node_modules/.bin/flow",
     "flow-check": "node_modules/.bin/flow check",
     "lint": "node_modules/.bin/eslint --quiet app/assets/javascripts/",
-    "pretty": "node_modules/.bin/prettier --write --config .prettierrc \"app/assets/javascripts/**/*.js\"",
-    "am-i-pretty": "node_modules/.bin/prettier --list-different --config .prettierrc \"app/assets/javascripts/**/*.js\"",
+    "pretty":
+      "node_modules/.bin/prettier --write --config .prettierrc \"app/assets/javascripts/**/*.js\"",
+    "am-i-pretty":
+      "node_modules/.bin/prettier --list-different --config .prettierrc \"app/assets/javascripts/**/*.js\"",
     "lint-fix": "node_modules/.bin/eslint --fix --quiet app/assets/javascripts/",
-    "flow-coverage": "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i \"./app/assets/javascripts/**/*.js\" -i \"./app/assets/javascripts/**/*.jsx\" -x \"./app/assets/javascripts/test/**/*.js\" -t html -t text",
-    "docs": "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --project-name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api",
+    "flow-coverage":
+      "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i \"./app/assets/javascripts/**/*.js\" -i \"./app/assets/javascripts/**/*.jsx\" -x \"./app/assets/javascripts/test/**/*.js\" -t html -t text",
+    "docs":
+      "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --project-name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api",
     "import-db": "./tools/import_export/import.sh webknossos-testing ./test/db/",
     "drop-db": "./tools/dropDB.sh webknossos-testing"
   },
@@ -91,7 +99,6 @@
     "d3": "^3.5.12",
     "data.maybe": "^1.2.2",
     "deep-freeze": "0.0.1",
-    "enzyme": "^2.9.1",
     "es6-promise": "^3.0.2",
     "flow-coverage-report": "^0.4.0",
     "font-awesome": "^4.5.0",
@@ -121,9 +128,7 @@
     "whatwg-fetch": "^1.1.0"
   },
   "ava": {
-    "source": [
-      "./public/test-bundle/**/*.{js,jsx}"
-    ],
+    "source": ["./public/test-bundle/**/*.{js,jsx}"],
     "snapshotDir": "app/assets/javascripts/test/snapshots",
     "concurrency": 8,
     "babel": {}
