--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "c3": "^0.4.10",
     "classnames": "^2.2.5",
     "clipboard-js": "^0.2.0",
+    "common-tags": "^1.5.1",
     "d3": "^3.5.12",
     "data.maybe": "^1.2.2",
     "deep-freeze": "0.0.1",
