--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "env": {
     "test": {
       "presets": [
-        ["env", {
+        ["@babel/preset-env", {
           "targets": {
             "node": "current"
           },
@@ -10,20 +10,20 @@
             "transform-regenerator"
           ],
         }],
-        "react",
+        "@babel/preset-react",
       ],
       plugins: [
-        "transform-async-to-generator",
-        "transform-class-properties",
-        "transform-flow-strip-types",
+        "@babel/plugin-transform-async-to-generator",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-flow-strip-types",
         ["import", { libraryName: "antd" }],
         "syntax-dynamic-import",
-        ["transform-object-rest-spread", { "useBuiltIns": true }]
+        ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]
       ],
     }
   },
   presets: [
-    ["env", {
+    ["@babel/preset-env", {
       "targets": {
         "browsers": [
           "last 3 Chrome versions",
@@ -38,15 +38,14 @@
       ],
       "modules": false,
     }],
-    "react",
-    /*"react-optimize",*/
+    "@babel/preset-react",
   ],
   plugins: [
-    "transform-async-to-generator",
-    "transform-class-properties",
-    "transform-flow-strip-types",
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-flow-strip-types",
     ["import", { libraryName: "antd" }],
     "syntax-dynamic-import",
-    ["transform-object-rest-spread", { "useBuiltIns": true }]
+    ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]
   ],
 }
