--- a/package.json
+++ b/package.json
@@ -10,37 +10,36 @@
     "url": "git://github.com/scalableminds/webknossos.git"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.34",
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.34",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.34",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.34",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0-beta.34",
+    "@babel/polyfill": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@babel/preset-react": "^7.0.0-beta.34",
+    "@babel/register": "^7.0.0-beta.34",
     "ava": "git://github.com/philippotto/ava#b6a6cb24e0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "8.0.0-beta.0",
     "babel-plugin-import": "^1.1.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-register": "^6.9.0",
     "css-loader": "^0.28.1",
     "documentation": "^5.1.1",
     "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.1.1",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-webpack": "^0.8.0",
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^1.1.5",
     "flow-bin": "^0.59",
     "himalaya": "^0.2.12",
     "imports-loader": "^0.7.1",
@@ -50,14 +49,14 @@
     "less-loader": "^4.0.5",
     "mock-require": "^1.2.1",
     "node-fetch": "^1.7.2",
-    "prettier": "^1.6.1",
-    "react-test-renderer": "^15.6.1",
+    "prettier": "^1.9.1",
+    "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.8",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webdriverio": "^4.8.0",
-    "webpack": "^3.5.1"
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "test": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=30s",
@@ -89,7 +88,7 @@
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
-    "antd": "^2.13.10",
+    "antd": "^3.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "backbone-events-standalone": "^0.2.7",
     "base64-js": "^1.2.1",
@@ -105,10 +104,10 @@
     "form-syphon": "0.0.5",
     "hammerjs": "^2.0.8",
     "history": "^4.7.2",
-    "immutability-helper": "^2.1.1",
+    "immutability-helper": "^2.6.0",
     "lodash": "^4.13.1",
     "mjs": "^1.0.0",
-    "moment": "^2.19.1",
+    "moment": "^2.19.3",
     "pako": "^0.2.8",
     "react": "^16.2.0",
     "react-c3js": "^0.1.20",
