--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "documentation": "^5.1.1",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-webpack": "^0.8.0",
-    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-flowtype": "^2.40.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-react": "^7.5.1",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
-    "flow-bin": "^0.59",
+    "flow-bin": "^0.59.0",
     "flow-coverage-report": "^0.4.0",
     "himalaya": "^0.2.12",
     "imports-loader": "^0.7.1",
@@ -50,7 +50,7 @@
     "less-loader": "^4.0.5",
     "mock-require": "^1.2.1",
     "node-fetch": "^1.7.2",
-    "prettier": "^1.9.1",
+    "prettier": "^1.9.2",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
@@ -61,29 +61,35 @@
   },
   "scripts": {
     "test": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=30s",
-    "test-verbose": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=60s --verbose",
+    "test-verbose":
+      "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=60s --verbose",
     "test-only": "buildtools/test.sh test --timeout=30s",
     "test-watch": "buildtools/test.sh test --watch",
     "test-debug": "buildtools/test.sh test --debug",
     "test-prepare": "buildtools/test.sh prepare",
     "test-prepare-watch": "buildtools/test.sh prepare -w",
     "test-e2e": "node prepareTestDB.js && buildtools/test.sh test-e2e --timeout=60s --verbose",
-    "test-help": "echo For development it is recommended to run yarn test-prepare-watch in one terminal and yarn test-watch in another. This is the fastest way to perform incremental testing. If you are only interested in running test once, use yarn test.",
+    "test-help":
+      "echo For development it is recommended to run yarn test-prepare-watch in one terminal and yarn test-watch in another. This is the fastest way to perform incremental testing. If you are only interested in running test once, use yarn test.",
     "remove-snapshots": "rm -r app/assets/javascripts/test/snapshots/public",
     "flow": "node_modules/.bin/flow",
     "flow-check": "node_modules/.bin/flow check",
     "lint": "node_modules/.bin/eslint --quiet app/assets/javascripts/",
-    "pretty": "node_modules/.bin/prettier --write --config .prettierrc \"app/assets/javascripts/**/*.js\"",
-    "am-i-pretty": "node_modules/.bin/prettier --list-different --config .prettierrc \"app/assets/javascripts/**/*.js\"",
+    "pretty":
+      "node_modules/.bin/prettier --write --config .prettierrc \"app/assets/javascripts/**/*.js\"",
+    "am-i-pretty":
+      "node_modules/.bin/prettier --list-different --config .prettierrc \"app/assets/javascripts/**/*.js\"",
     "lint-fix": "node_modules/.bin/eslint --fix --quiet app/assets/javascripts/",
-    "flow-coverage": "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i \"./app/assets/javascripts/**/*.js\" -i \"./app/assets/javascripts/**/*.jsx\" -x \"./app/assets/javascripts/test/**/*.js\" -t html -t text",
-    "docs": "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --project-name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api",
+    "flow-coverage":
+      "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i \"./app/assets/javascripts/**/*.js\" -i \"./app/assets/javascripts/**/*.jsx\" -x \"./app/assets/javascripts/test/**/*.js\" -t html -t text",
+    "docs":
+      "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --project-name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api",
     "import-db": "./tools/import_export/import.sh webknossos-testing ./test/db/",
     "drop-db": "./tools/dropDB.sh webknossos-testing"
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
-    "antd": "^3.0.0",
+    "antd": "^3.0.1",
     "backbone-events-standalone": "^0.2.7",
     "base64-js": "^1.2.1",
     "classnames": "^2.2.5",
@@ -117,9 +123,7 @@
     "whatwg-fetch": "^1.1.0"
   },
   "ava": {
-    "source": [
-      "./public/test-bundle/**/*.{js,jsx}"
-    ],
+    "source": ["./public/test-bundle/**/*.{js,jsx}"],
     "snapshotDir": "app/assets/javascripts/test/snapshots",
     "concurrency": 8,
     "babel": {}
