--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "less-loader": "^4.0.5",
     "mock-require": "^1.2.1",
     "node-fetch": "^1.7.2",
-    "prettier": "^1.6.1",
+    "prettier": "^1.9.2",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
@@ -90,6 +90,7 @@
     "drop-db": "./tools/dropDB.sh webknossos-testing"
   },
   "dependencies": {
+    "@scalableminds/saxophone": "^0.4.0",
     "airbrake-js": "^0.5.8",
     "antd": "^2.13.4",
     "backbone-events-standalone": "^0.2.7",
