--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,25 @@ services:
     extends:
       service: base
     ports:
+      - "5005:5005"
+      - "7155:7155"
       - "9000:9000"
     links:
       - mongo-dev
-    command: >
-      bash -c
-      "sbt -v -d -jvm-debug 5005 \"run
-      -Djava.net.preferIPv4Stack=true
-      -Dhttp.address=0.0.0.0
-      -Dhttp.port=$${PORT}
-      -Dmongodb.db=$${MONGO_DB}
-      -Dmongodb.url=$${MONGO_HOST}
-      -Dmongodb.port=$${MONGO_PORT}
-      -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      \""
+    command:
+      - bash
+      - -c
+      - >
+        ./sbt
+        -v -d -jvm-debug 5005
+        "run
+          -Djava.net.preferIPv4Stack=true
+          -Dhttp.address=0.0.0.0
+          -Dhttp.port=$${PORT}
+          -Dmongodb.db=$${MONGO_DB}
+          -Dmongodb.url=$${MONGO_HOST}
+          -Dmongodb.port=$${MONGO_PORT}
+          -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}"
     environment:
       - PORT=9000
       - MONGO_HOST=mongo-dev
@@ -38,8 +43,6 @@ services:
 
   base:
     image: scalableminds/sbt:sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
-    ports:
-      - "5005:5005"
     environment:
       - USER_NAME=${USER_NAME:-sbt-user}
       - USER_UID
@@ -81,22 +84,27 @@ services:
   e2e-tests:
     extends:
       service: base
-    command: >
-      bash -c
-      "sbt -v -d \"test-only * --
-      -Dconfig.file=./conf/application_$${MODE}.conf
-      -Djava.net.preferIPv4Stack=true
-      -Dhttp.address=0.0.0.0
-      -Dhttp.port=$${PORT}
-      -Dmongodb.db=$${MONGO_DB}
-      -Dmongodb.url=$${MONGO_HOST}
-      -Dmongodb.port=$${MONGO_PORT}
-      -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      \""
     ports:
+      - "5005:5005"
+      - "7155:7155"
       - "9000:9000"
     links:
       - mongo
+    command:
+      - bash
+      - -c
+      - >
+        ./sbt
+        -v -d
+        "test-only * --
+          -Dconfig.file=./conf/application_$${MODE}.conf
+          -Djava.net.preferIPv4Stack=true
+          -Dhttp.address=0.0.0.0
+          -Dhttp.port=$${PORT}
+          -Dmongodb.db=$${MONGO_DB}
+          -Dmongodb.url=$${MONGO_HOST}
+          -Dmongodb.port=$${MONGO_PORT}
+          -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}"
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
