--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,35 @@ services:
       - "9000:9000"
     links:
       - mongo
+      - fossildb
     environment:
       - PORT=9000
       - MODE=dev
+
+  base:
+    image: scalableminds/sbt:sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
+    environment:
+      - USER_NAME=${USER_NAME:-sbt-user}
+      - USER_UID
+      - USER_GID
+      - TZ
+    working_dir: /home/${USER_NAME:-sbt-user}/webknossos
+    volumes:
+      - ".:/home/${USER_NAME:-sbt-user}/webknossos"
+      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/${USER_NAME:-sbt-user}/.m2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/${USER_NAME:-sbt-user}/.ivy2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/${USER_NAME:-sbt-user}/.sbt"
+      - "${DOCKER_CACHE_PREFIX:-~}/.yarn-cache:/usr/local/share/.cache/yarn"
 
   dev:
     extends:
       service: base
     ports:
       - "5005:5005"
-      - "7155:7155"
       - "9000:9000"
     links:
       - mongo-dev
+      - fossildb-dev
     command:
       - bash
       - -c
@@ -40,21 +56,6 @@ services:
       - MONGO_PORT=27017
       - MONGO_DB=webknossos-dev
     stdin_open: true
-
-  base:
-    image: scalableminds/sbt:sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
-    environment:
-      - USER_NAME=${USER_NAME:-sbt-user}
-      - USER_UID
-      - USER_GID
-      - TZ
-    working_dir: /home/${USER_NAME:-sbt-user}/webknossos
-    volumes:
-      - ".:/home/${USER_NAME:-sbt-user}/webknossos"
-      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/${USER_NAME:-sbt-user}/.m2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/${USER_NAME:-sbt-user}/.ivy2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/${USER_NAME:-sbt-user}/.sbt"
-      - "${DOCKER_CACHE_PREFIX:-~}/.yarn-cache:/usr/local/share/.cache/yarn"
 
   frontend-dependencies:
     extends:
@@ -86,10 +87,10 @@ services:
       service: base
     ports:
       - "5005:5005"
-      - "7155:7155"
       - "9000:9000"
     links:
       - mongo
+      - fossildb
     command:
       - bash
       - -c
@@ -113,12 +114,30 @@ services:
       - MODE=dev
 
   mongo:
-    image: mongo
+    image: mongo:3.4
 
   mongo-dev:
-    image: mongo
+    extends:
+      service: mongo
     ports:
       - "27017:27017"
     volumes:
       - "./dev-db/configdb:/data/configdb"
       - "./dev-db/db:/data/db"
+
+  fossildb:
+    image: scalableminds/fossildb:master__222
+    command:
+      - fossildb
+      - -c
+      - skeletons,skeletonUpdates,volumes,volumeData
+    user: ${USER_UID:-1000}:${USER_GID:-1000}
+
+  fossildb-dev:
+    extends:
+      service: fossildb
+    ports:
+      - "7155:7155"
+    volumes:
+      - "./fossildb/data:/fossildb/data"
+      - "./fossildb/backup:/fossildb/backup"
