--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,10 @@ datastore {
     uri = "localhost:9000"
     secured = false
   }
+  fossildb{
+    address = "localhost"
+    port = 7155
+ }
 }
 
 # Defining the listening address:
