docker-compose: fix fossildb host in dev service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
           -Djava.net.preferIPv4Stack=true
           -Dhttp.address=0.0.0.0
           -Dhttp.port=$${PORT}
-          -Ddatastore.fossildb.address=fossildb
+          -Ddatastore.fossildb.address=fossildb-dev
           -Dmongodb.db=$${MONGO_DB}
           -Dmongodb.url=$${MONGO_HOST}
           -Dmongodb.port=$${MONGO_PORT}
