simplified mongo config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,16 +89,7 @@ oxalis{
 
 # Database configuration
 # ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-mongodb{
-  db=play-oxalis
-  url="127.0.0.1"
-  port=27017
-  needsAuth=false
-  knowledgedb.db=knowledgeDB
-  binary.dbname=binaryData
-}
+mongodb.uri="mongodb://127.0.0.1:27017/play-oxalis"
 
 # Email configuration
 # ~~~~~
