--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,12 @@ services:
     entrypoint: bin/oxalis
     command:
       - -Djava.io.tmpdir=disk
-      - -Dlogger.file=conf/application-logger.xml
       - -Dconfig.file=conf/application_dev.conf
+      - -Djava.net.preferIPv4Stack=true
       - -Dhttp.address=0.0.0.0
       - -Dhttp.port=9000
-      - -Dmongodb.db=webknossos
-      - -Dmongodb.url=mongo
-      - -Dmongodb.port=27017
       - -Dmongodb.uri=mongodb://mongo:27017/webknossos
-    environment:
-      - PORT=9000
-      - MODE=dev
+
 
   base:
     image: scalableminds/sbt:sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
@@ -58,15 +53,10 @@ services:
           -Djava.net.preferIPv4Stack=true
           -Dhttp.address=0.0.0.0
           -Dhttp.port=$${PORT}
-          -Dmongodb.db=$${MONGO_DB}
-          -Dmongodb.url=$${MONGO_HOST}
-          -Dmongodb.port=$${MONGO_PORT}
-          -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}"
+          -Dmongodb.uri=$${MONGO_URI}"
     environment:
       - PORT=9000
-      - MONGO_HOST=mongo-dev
-      - MONGO_PORT=27017
-      - MONGO_DB=webknossos-dev
+      - MONGO_URI=mongodb://mongo-dev:27017/webknossos-dev
     stdin_open: true
 
   e2e-tests:
@@ -89,14 +79,9 @@ services:
           -Djava.net.preferIPv4Stack=true
           -Dhttp.address=0.0.0.0
           -Dhttp.port=$${PORT}
-          -Dmongodb.db=$${MONGO_DB}
-          -Dmongodb.url=$${MONGO_HOST}
-          -Dmongodb.port=$${MONGO_PORT}
-          -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}"
+          -Dmongodb.uri=$${MONGO_URI}"
     environment:
-      - MONGO_HOST=mongo
-      - MONGO_PORT=27017
-      - MONGO_DB=webknossos-testing
+      - MONGO_URI=mongodb://mongo-dev:27017/webknossos-testing
       - PORT=9000
       - MODE=dev
 
