--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.5.8",
     "webdriverio": "^4.8.0",
     "webpack": "^3.5.1"
