--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,23 +42,16 @@ jobs:
             - "~/.sbt"
             - "~/.yarn-cache"
 
-      - save_cache:
-          key: cache-{{ checksum ".circleci/cache_version" }}-{{ .Branch }}
-          paths:
-            - "~/.m2"
-            - "~/.ivy2"
-            - "~/.sbt"
-            - "~/.yarn-cache"
-
       - run:
           name: Build webknossos docker image
-          command: docker build --no-cache --pull -t scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
+          command: |
+            docker build --pull -t scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
 
       - run:
           name: Build webknossos-datastore docker image
           command: |
             cd webknossos-datastore
-            docker build --pull-t scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
+            docker build --pull -t scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
 
       - run:
           name: Lint frontend code
