--- a/webknossos-datastore/conf/application.conf
+++ b/webknossos-datastore/conf/application.conf
@@ -1,4 +1,4 @@
-play.modules.enabled += "com.scalableminds.webknossos.datastore.datastore.DataStoreModule"
+play.modules.enabled += "com.scalableminds.webknossos.datastore.DataStoreModule"
 
 # Configuration
 application {
