--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "drop-db": "./tools/dropDB.sh webknossos-testing"
   },
   "dependencies": {
+    "@scalableminds/saxophone": "^0.5.0",
     "airbrake-js": "^0.5.8",
     "antd": "^3.0.1",
     "backbone-events-standalone": "^0.2.7",
