add sql-schema-to-slick compilation, access postgres from test route

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,3 +155,12 @@ play.http.parser.maxMemoryBuffer=250M
 play.http.parser.maxDiskBuffer=1G
 #play.http.filters = "utils.Filters"
 play.http.errorHandler = "utils.ErrorHandler"
+
+
+postgres = {
+  url = "jdbc:postgresql://localhost/webknossos-test"
+  driver = org.postgresql.Driver
+  keepAliveConnection = true
+  user = "postgres"
+  password = "postgres"
+}
