--- a/conf/application.conf
+++ b/conf/application.conf
@@ -158,7 +158,7 @@ play.http.errorHandler = "utils.ErrorHandler"
 
 
 postgres = {
-  url = "jdbc:postgresql://localhost/webknossos-test"
+  url = "jdbc:postgresql://localhost/webknossos"
   driver = org.postgresql.Driver
   keepAliveConnection = true
   user = "postgres"
